@@ -1,7 +1,9 @@
 package datawave.query.metrics;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -22,61 +24,9 @@ import javax.annotation.PostConstruct;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
-import com.google.common.collect.Multimap;
-
-import datawave.configuration.DatawaveEmbeddedProjectStageHolder;
-import datawave.data.hash.UID;
-import datawave.data.hash.UIDBuilder;
-import datawave.ingest.data.RawRecordContainer;
-import datawave.ingest.config.RawRecordContainerImpl;
-import datawave.ingest.data.Type;
-import datawave.ingest.data.TypeRegistry;
-import datawave.ingest.data.config.NormalizedContentInterface;
-import datawave.ingest.mapreduce.handler.shard.AbstractColumnBasedHandler;
-import datawave.ingest.mapreduce.job.BulkIngestKey;
-import datawave.ingest.mapreduce.job.writer.LiveContextWriter;
-import datawave.ingest.table.config.TableConfigHelper;
-import datawave.query.iterator.QueryOptions;
-import datawave.security.authorization.DatawavePrincipal;
-import datawave.security.system.CallerPrincipal;
-import datawave.security.util.AuthorizationsUtil;
-import datawave.webservice.common.connection.AccumuloConnectionFactory;
-import datawave.webservice.common.connection.AccumuloConnectionFactory.Priority;
-import datawave.webservice.common.logging.ThreadConfigurableLogger;
-import datawave.webservice.common.logging.ThreadLocalLogLevel;
-import datawave.webservice.query.Query;
-import datawave.webservice.query.QueryImpl;
-import datawave.webservice.query.QueryImpl.Parameter;
-import datawave.webservice.query.cache.QueryMetricFactory;
-import datawave.webservice.query.cache.ResultsPage;
-import datawave.webservice.query.exception.QueryException;
-import datawave.webservice.query.exception.QueryExceptionType;
-import datawave.webservice.query.logic.QueryLogic;
-import datawave.webservice.query.logic.QueryLogicFactory;
-import datawave.webservice.query.metric.BaseQueryMetric;
-import datawave.webservice.query.metric.BaseQueryMetric.PageMetric;
-import datawave.webservice.query.metric.BaseQueryMetric.Lifecycle;
-import datawave.webservice.query.metric.BaseQueryMetricListResponse;
-import datawave.webservice.query.metric.QueryMetric;
-import datawave.webservice.query.metric.QueryMetricListResponse;
-import datawave.webservice.query.metric.QueryMetricsDetailListResponse;
-import datawave.webservice.query.metric.QueryMetricsSummaryHtmlResponse;
-import datawave.webservice.query.metric.QueryMetricsSummaryResponse;
-import datawave.webservice.query.result.event.EventBase;
-import datawave.webservice.query.result.event.FieldBase;
-import datawave.webservice.query.runner.RunningQuery;
-import datawave.webservice.query.util.QueryUtil;
-import datawave.webservice.result.BaseQueryResponse;
-import datawave.webservice.result.BaseResponse;
-import datawave.webservice.result.EventQueryResponseBase;
-
+import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
-import org.apache.accumulo.core.client.Connector;
 import org.apache.accumulo.core.client.TableExistsException;
 import org.apache.accumulo.core.client.TableNotFoundException;
 import org.apache.accumulo.core.client.admin.TableOperations;
@@ -102,146 +52,202 @@ import org.apache.hadoop.mapreduce.task.MapContextImpl;
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 
+import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
+import com.google.common.collect.Multimap;
+
+import datawave.configuration.DatawaveEmbeddedProjectStageHolder;
+import datawave.configuration.spring.SpringBean;
+import datawave.data.hash.UID;
+import datawave.data.hash.UIDBuilder;
+import datawave.ingest.config.RawRecordContainerImpl;
+import datawave.ingest.data.RawRecordContainer;
+import datawave.ingest.data.Type;
+import datawave.ingest.data.TypeRegistry;
+import datawave.ingest.data.config.NormalizedContentInterface;
+import datawave.ingest.mapreduce.handler.shard.AbstractColumnBasedHandler;
+import datawave.ingest.mapreduce.job.BulkIngestKey;
+import datawave.ingest.mapreduce.job.writer.LiveContextWriter;
+import datawave.ingest.table.config.TableConfigHelper;
+import datawave.marking.MarkingFunctions;
+import datawave.microservice.querymetric.BaseQueryMetric;
+import datawave.microservice.querymetric.BaseQueryMetric.Lifecycle;
+import datawave.microservice.querymetric.BaseQueryMetric.PageMetric;
+import datawave.microservice.querymetric.BaseQueryMetricListResponse;
+import datawave.microservice.querymetric.QueryMetric;
+import datawave.microservice.querymetric.QueryMetricFactory;
+import datawave.microservice.querymetric.QueryMetricListResponse;
+import datawave.microservice.querymetric.QueryMetricsDetailListResponse;
+import datawave.microservice.querymetric.QueryMetricsSummaryResponse;
+import datawave.query.iterator.QueryOptions;
+import datawave.query.jexl.visitors.JexlFormattedStringBuildingVisitor;
+import datawave.query.language.parser.jexl.LuceneToJexlQueryParser;
+import datawave.query.map.SimpleQueryGeometryHandler;
+import datawave.security.authorization.DatawavePrincipal;
+import datawave.security.util.AuthorizationsUtil;
+import datawave.webservice.common.connection.AccumuloConnectionFactory;
+import datawave.webservice.common.connection.AccumuloConnectionFactory.Priority;
+import datawave.webservice.common.logging.ThreadConfigurableLogger;
+import datawave.webservice.query.Query;
+import datawave.webservice.query.QueryImpl;
+import datawave.webservice.query.QueryImpl.Parameter;
+import datawave.webservice.query.cache.ResultsPage;
+import datawave.webservice.query.exception.QueryException;
+import datawave.webservice.query.exception.QueryExceptionType;
+import datawave.webservice.query.logic.QueryLogic;
+import datawave.webservice.query.logic.QueryLogicFactory;
+import datawave.webservice.query.result.event.EventBase;
+import datawave.webservice.query.result.event.FieldBase;
+import datawave.webservice.query.runner.RunningQuery;
+import datawave.webservice.query.util.QueryUtil;
+import datawave.webservice.result.BaseQueryResponse;
+import datawave.webservice.result.BaseResponse;
+import datawave.webservice.result.EventQueryResponseBase;
+
 @ApplicationScoped
 @Exclude(ifProjectStage = DatawaveEmbeddedProjectStageHolder.DatawaveEmbedded.class)
 @SuppressWarnings("unused")
 public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMetric> {
     private static final Logger log = ThreadConfigurableLogger.getLogger(ShardTableQueryMetricHandler.class);
-    
+
     private static final String QUERY_METRICS_LOGIC_NAME = "QueryMetricsQuery";
     protected static final String DEFAULT_SECURITY_MARKING = "PUBLIC";
-    
+
     @Inject
     private AccumuloConnectionFactory connectionFactory;
-    
+
     @Inject
     private QueryLogicFactory queryLogicFactory;
-    
-    @Inject
-    @CallerPrincipal
-    private DatawavePrincipal callerPrincipal;
-    
+
     @Inject
     @ConfigProperty(name = "dw.query.metrics.marking")
     protected String markingString;
-    
+
     @Inject
     @ConfigProperty(name = "dw.query.metrics.visibility")
     protected String visibilityString;
-    
+
     @Inject
     private QueryMetricFactory metricFactory;
-    
+
+    @Inject
+    @SpringBean(name = "LuceneToJexlQueryParser", refreshable = true)
+    private LuceneToJexlQueryParser luceneToJexlQueryParser;
+
     private Collection<String> connectorAuthorizationCollection = null;
     private String connectorAuthorizations = null;
-    
+    private MarkingFunctions markingFunctions = null;
+
     @SuppressWarnings("FieldCanBeLocal")
     private final String JOB_ID = "job_201109071404_1";
     @SuppressWarnings("FieldCanBeLocal")
     private static final String NULL_BYTE = "\0";
     public static final String CONTEXT_WRITER_MAX_CACHE_SIZE = "context.writer.max.cache.size";
-    
+
     // static to share the cache across instances of this class held by QueryExecutorBean, CachedResultsBean, QueryMetricsEnrichmentInterceptor, etc
     @SuppressWarnings("unchecked")
     private static Map metricsCache = Collections.synchronizedMap(new LRUMap(5000));
-    
+
     private final Configuration conf = new Configuration();
     private final StatusReporter reporter = new MockStatusReporter();
     private final AtomicBoolean tablesChecked = new AtomicBoolean(false);
     private AccumuloRecordWriter recordWriter = null;
-    
+
     private UIDBuilder<UID> uidBuilder = UID.builder();
-    
+
     public ShardTableQueryMetricHandler() {
         URL queryMetricsUrl = Thread.currentThread().getContextClassLoader().getResource("datawave/query/QueryMetrics.xml");
         Preconditions.checkNotNull(queryMetricsUrl);
         conf.addResource(queryMetricsUrl);
-        
+
         // encode the password because that's how the AccumuloRecordWriter
         String accumuloPassword = conf.get("AccumuloRecordWriter.password");
         byte[] encodedAccumuloPassword = Base64.encodeBase64(accumuloPassword.getBytes());
         conf.set("AccumuloRecordWriter.password", new String(encodedAccumuloPassword));
+        markingFunctions = MarkingFunctions.Factory.createMarkingFunctions();
     }
-    
+
     @PostConstruct
     private void initialize() {
-        Connector connector = null;
-        
+        AccumuloClient client = null;
+
         try {
-            connector = connectionFactory.getConnection(Priority.ADMIN, new HashMap<>());
-            connectorAuthorizations = connector.securityOperations().getUserAuthorizations(connector.whoami()).toString();
+            client = connectionFactory.getClient(Priority.ADMIN, new HashMap<>());
+            connectorAuthorizations = client.securityOperations().getUserAuthorizations(client.whoami()).toString();
             connectorAuthorizationCollection = Lists.newArrayList(StringUtils.split(connectorAuthorizations, ","));
             reload();
-            
+
             if (tablesChecked.compareAndSet(false, true))
                 verifyTables();
         } catch (Exception e) {
             log.error("Error setting connection factory", e);
         } finally {
-            if (connector != null) {
+            if (client != null) {
                 try {
-                    connectionFactory.returnConnection(connector);
+                    connectionFactory.returnClient(client);
                 } catch (Exception e) {
                     log.error("Error returning connection to connection factory", e);
                 }
             }
         }
     }
-    
+
     @Override
     protected void finalize() throws Throwable {
         super.finalize();
         this.recordWriter.close(null);
     }
-    
+
     @Override
     public void flush() throws Exception {
         this.recordWriter.flush();
     }
-    
+
     private void verifyTables() {
-        Connector connector = null;
-        
+        AccumuloClient client = null;
+
         try {
-            connector = this.connectionFactory.getConnection(Priority.ADMIN, new HashMap<>());
+            client = this.connectionFactory.getClient(Priority.ADMIN, new HashMap<>());
             AbstractColumnBasedHandler<Key> handler = new ContentQueryMetricsHandler<>();
-            createAndConfigureTablesIfNecessary(handler.getTableNames(conf), connector.tableOperations(), conf);
+            createAndConfigureTablesIfNecessary(handler.getTableNames(conf), client.tableOperations(), conf);
         } catch (Exception e) {
             log.error("Error verifying table configuration", e);
         } finally {
-            if (null != connector) {
+            if (null != client) {
                 try {
-                    this.connectionFactory.returnConnection(connector);
+                    this.connectionFactory.returnClient(client);
                 } catch (Exception e) {
                     log.error("Error returning connection to connection factory");
                 }
             }
         }
     }
-    
+
     private void writeMetrics(QueryMetric updatedQueryMetric, List<QueryMetric> storedQueryMetrics, Date lastUpdated, boolean delete) throws Exception {
         LiveContextWriter contextWriter = null;
-        
+
         MapContext<Text,RawRecordContainer,Text,Mutation> context = null;
-        
+
         try {
             contextWriter = new LiveContextWriter();
             contextWriter.setup(conf, false);
-            
+
             TaskAttemptID taskId = new TaskAttemptID(new TaskID(new JobID(JOB_ID, 1), TaskType.MAP, 1), 1);
             context = new MapContextImpl<>(conf, taskId, null, recordWriter, null, reporter, null);
-            
+
             for (QueryMetric storedQueryMetric : storedQueryMetrics) {
                 AbstractColumnBasedHandler<Key> handler = new ContentQueryMetricsHandler<>();
                 handler.setup(context);
-                
+
                 Multimap<BulkIngestKey,Value> r = getEntries(handler, updatedQueryMetric, storedQueryMetric, lastUpdated, delete);
-                
+
                 try {
                     if (r != null) {
                         contextWriter.write(r, context);
                     }
-                    
+
                     if (handler.getMetadata() != null) {
                         contextWriter.write(handler.getMetadata().getBulkMetadata(), context);
                     }
@@ -255,7 +261,7 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             }
         }
     }
-    
+
     public Map<String,String> getEventFields(BaseQueryMetric queryMetric) {
         // ignore duplicates as none are expected
         Map<String,String> eventFields = new HashMap<>();
@@ -267,44 +273,50 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
         }
         return eventFields;
     }
-    
+
     private Multimap<BulkIngestKey,Value> getEntries(AbstractColumnBasedHandler<Key> handler, QueryMetric updatedQueryMetric, QueryMetric storedQueryMetric,
                     Date lastUpdated, boolean delete) {
         Type type = TypeRegistry.getType("querymetrics");
         ContentQueryMetricsIngestHelper ingestHelper = new ContentQueryMetricsIngestHelper(delete);
-        
+
         ingestHelper.setup(conf);
-        
+
         RawRecordContainerImpl event = new RawRecordContainerImpl();
         event.setConf(this.conf);
         event.setDataType(type);
         event.setDate(storedQueryMetric.getCreateDate().getTime());
-        // get security marking set in the config, otherwise default to PUBLIC
-        if (visibilityString != null) {
-            event.setVisibility(new ColumnVisibility(visibilityString));
-        } else {
+        // get security markings from metric, otherwise default to PUBLIC
+        Map<String,String> markings = updatedQueryMetric.getMarkings();
+        if (markingFunctions == null || markings == null || markings.isEmpty()) {
             event.setVisibility(new ColumnVisibility(DEFAULT_SECURITY_MARKING));
+        } else {
+            try {
+                event.setVisibility(this.markingFunctions.translateToColumnVisibility(markings));
+            } catch (Exception e) {
+                log.error(e.getMessage(), e);
+                event.setVisibility(new ColumnVisibility(DEFAULT_SECURITY_MARKING));
+            }
         }
         event.setAuxData(storedQueryMetric);
         event.setRawRecordNumber(1000L);
         event.addAltId(storedQueryMetric.getQueryId());
-        
+
         event.setId(uidBuilder.newId(storedQueryMetric.getQueryId().getBytes(), (Date) null));
-        
+
         final Multimap<String,NormalizedContentInterface> fields;
-        
+
         if (delete) {
             fields = ingestHelper.getEventFieldsToDelete(updatedQueryMetric, storedQueryMetric);
         } else {
             fields = ingestHelper.getEventFieldsToWrite(updatedQueryMetric);
         }
-        
+
         Key key = new Key();
-        
+
         if (handler.getMetadata() != null) {
             handler.getMetadata().addEventWithoutLoadDates(ingestHelper, event, fields);
         }
-        
+
         String eventTable = handler.getShardTableName().toString();
         String indexTable = handler.getShardIndexTableName().toString();
         String reverseIndexTable = handler.getShardReverseIndexTableName().toString();
@@ -312,13 +324,13 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
         Multimap<BulkIngestKey,Value> r = handler.processBulk(key, event, fields, reporter);
         List<BulkIngestKey> keysToRemove = new ArrayList<>();
         Map<String,BulkIngestKey> tfFields = new HashMap<>();
-        
+
         // if an event has more than two entries for a given field, only keep the longest
         for (Entry<BulkIngestKey,Collection<Value>> entry : r.asMap().entrySet()) {
             String table = entry.getKey().getTableName().toString();
             BulkIngestKey bulkIngestKey = entry.getKey();
             Key currentKey = bulkIngestKey.getKey();
-            
+
             if (table.equals(indexTable) || table.equals(reverseIndexTable)) {
                 String value = currentKey.getRow().toString();
                 if (value.length() > fieldSizeThreshold) {
@@ -326,17 +338,17 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
                 }
             }
         }
-        
+
         // remove any keys from the index or reverseIndex where the value size exceeds the fieldSizeThreshold
         for (BulkIngestKey b : keysToRemove) {
             r.removeAll(b);
         }
-        
+
         // replace the longest of the keys from fields that get parsed as content
         for (Entry<String,BulkIngestKey> l : tfFields.entrySet()) {
             r.put(l.getValue(), new Value(new byte[0]));
         }
-        
+
         for (Entry<BulkIngestKey,Collection<Value>> entry : r.asMap().entrySet()) {
             if (delete) {
                 entry.getKey().getKey().setTimestamp(lastUpdated.getTime());
@@ -346,34 +358,32 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             }
             entry.getKey().getKey().setDeleted(delete);
         }
-        
+
         return r;
     }
-    
+
     @SuppressWarnings("unchecked")
     @Override
     public void updateMetric(QueryMetric updatedQueryMetric, DatawavePrincipal datawavePrincipal) throws Exception {
         Date lastUpdated = updatedQueryMetric.getLastUpdated();
-        
+
         try {
             enableLogs(false);
             String sid = updatedQueryMetric.getUser();
             if (sid == null) {
                 sid = datawavePrincipal.getShortName();
             }
-            
+
             // find and remove previous entries
             BaseQueryMetricListResponse response = new QueryMetricListResponse();
             Date end = new Date();
             Date begin = DateUtils.setYears(end, 2000);
-            
+
             // user's DatawavePrincipal must have the Administrator role to use the Metrics query logic
             QueryMetric cachedQueryMetric;
-            QueryMetric newCachedQueryMetric;
+            QueryMetric updatedQueryMetricCopy;
             synchronized (ShardTableQueryMetricHandler.class) {
                 cachedQueryMetric = (QueryMetric) metricsCache.get(updatedQueryMetric.getQueryId());
-                // duplicate updatedQueryMetric because we're counting on the cache to be a snapshot of the QueryMetric
-                // so that we can retrieve it next update call to create the delete Mutations for the values written to Accumulo
                 Map<Long,PageMetric> storedPageMetricMap = new TreeMap<>();
                 if (cachedQueryMetric != null) {
                     List<PageMetric> cachedPageMetrics = cachedQueryMetric.getPageTimes();
@@ -387,15 +397,14 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
                 for (PageMetric p : updatedQueryMetric.getPageTimes()) {
                     storedPageMetricMap.put(p.getPageNumber(), p);
                 }
-                newCachedQueryMetric = (QueryMetric) updatedQueryMetric.duplicate();
                 ArrayList<PageMetric> newPageMetrics = new ArrayList<>();
                 newPageMetrics.addAll(storedPageMetricMap.values());
-                newCachedQueryMetric.setPageTimes(newPageMetrics);
-                metricsCache.put(updatedQueryMetric.getQueryId(), newCachedQueryMetric);
+                updatedQueryMetric.setPageTimes(newPageMetrics);
+                metricsCache.put(updatedQueryMetric.getQueryId(), updatedQueryMetric);
             }
-            
+
             List<QueryMetric> queryMetrics = new ArrayList<>();
-            
+
             if (cachedQueryMetric == null) {
                 // if numPages > 0 or Lifecycle > DEFINED, then we should have a metric cached already
                 // if we don't, then query for the current stored metric
@@ -413,89 +422,81 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
                     query.setPagesize(1000);
                     query.setId(UUID.randomUUID());
                     query.setParameters(ImmutableMap.of(QueryOptions.INCLUDE_GROUPING_CONTEXT, "true"));
-                    queryMetrics = getQueryMetrics(response, query, callerPrincipal);
+                    queryMetrics = getQueryMetrics(response, query, datawavePrincipal);
                 }
             } else {
                 queryMetrics = Collections.singletonList(cachedQueryMetric);
             }
-            
+
             if (!queryMetrics.isEmpty()) {
                 writeMetrics(updatedQueryMetric, queryMetrics, lastUpdated, true);
             }
-            
-            long nextUpdateNumber = 0;
-            
-            for (BaseQueryMetric m : queryMetrics) {
-                if ((m.getNumUpdates() + 1) > nextUpdateNumber) {
-                    nextUpdateNumber = m.getNumUpdates() + 1;
-                }
-            }
-            
-            updatedQueryMetric.setNumUpdates(nextUpdateNumber);
-            
+
+            populateMetricSelectors(updatedQueryMetric, this.luceneToJexlQueryParser);
+            incrementNumUpdates(updatedQueryMetric, queryMetrics);
             synchronized (ShardTableQueryMetricHandler.class) {
-                newCachedQueryMetric.setNumUpdates(nextUpdateNumber);
-                metricsCache.put(updatedQueryMetric.getQueryId(), newCachedQueryMetric);
+                metricsCache.put(updatedQueryMetric.getQueryId(), updatedQueryMetric);
             }
-            
+
             // write new entry
             writeMetrics(updatedQueryMetric, Collections.singletonList(updatedQueryMetric), lastUpdated, false);
         } finally {
             enableLogs(true);
         }
     }
-    
+
     private List<QueryMetric> getQueryMetrics(BaseResponse response, Query query, DatawavePrincipal datawavePrincipal) {
         List<QueryMetric> queryMetrics = new ArrayList<>();
         RunningQuery runningQuery = null;
-        Connector connector = null;
-        
+        AccumuloClient client = null;
+
         try {
             Map<String,String> trackingMap = this.connectionFactory.getTrackingMap(Thread.currentThread().getStackTrace());
-            connector = this.connectionFactory.getConnection(Priority.ADMIN, trackingMap);
+            client = this.connectionFactory.getClient(Priority.ADMIN, trackingMap);
             QueryLogic<?> queryLogic = queryLogicFactory.getQueryLogic(query.getQueryLogicName(), datawavePrincipal);
             if (queryLogic instanceof QueryMetricQueryLogic) {
                 ((QueryMetricQueryLogic) queryLogic).setRolesSets(datawavePrincipal.getPrimaryUser().getRoles());
             }
-            runningQuery = new RunningQuery(null, connector, Priority.ADMIN, queryLogic, query, query.getQueryAuthorizations(), datawavePrincipal,
-                            metricFactory);
-            
+            runningQuery = new RunningQuery(null, client, Priority.ADMIN, queryLogic, query, query.getQueryAuthorizations(), datawavePrincipal, metricFactory);
+
             boolean done = false;
             List<Object> objectList = new ArrayList<>();
-            
+
             while (!done) {
                 ResultsPage resultsPage = runningQuery.next();
-                
+
                 if (!resultsPage.getResults().isEmpty()) {
                     objectList.addAll(resultsPage.getResults());
                 } else {
                     done = true;
                 }
             }
-            
-            BaseQueryResponse queryResponse = queryLogic.getTransformer(query).createResponse(new ResultsPage(objectList));
+
+            BaseQueryResponse queryResponse = queryLogic.getEnrichedTransformer(query).createResponse(new ResultsPage(objectList));
             List<QueryExceptionType> exceptions = queryResponse.getExceptions();
-            
+
             if (queryResponse.getExceptions() != null && !queryResponse.getExceptions().isEmpty()) {
                 if (response != null) {
                     response.setExceptions(new LinkedList<>(exceptions));
                     response.setHasResults(false);
                 }
             }
-            
+
             if (!(queryResponse instanceof EventQueryResponseBase)) {
                 if (response != null) {
                     response.addException(new QueryException("incompatible response")); // TODO: Should this be an IllegalStateException?
                     response.setHasResults(false);
                 }
             }
-            
+
             EventQueryResponseBase eventQueryResponse = (EventQueryResponseBase) queryResponse;
             List<EventBase> eventList = eventQueryResponse.getEvents();
-            
-            for (EventBase<?,?> event : eventList) {
-                QueryMetric metric = toMetric(event);
-                queryMetrics.add(metric);
+
+            if (eventList != null) {
+                for (EventBase<?,?> event : eventList) {
+                    QueryMetric metric = (QueryMetric) toMetric(event);
+                    queryMetrics.add(metric);
+                }
             }
         } catch (Exception e) {
             log.error(e.getMessage(), e);
@@ -504,36 +505,35 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             }
         } finally {
             if (null != this.connectionFactory) {
-                if (null != runningQuery && null != connector) {
+                if (null != runningQuery && null != client) {
                     try {
                         runningQuery.closeConnection(this.connectionFactory);
                     } catch (Exception e) {
                         log.warn("Could not return connector to factory", e);
                     }
-                } else if (null != connector) {
+                } else if (null != client) {
                     try {
-                        this.connectionFactory.returnConnection(connector);
+                        this.connectionFactory.returnClient(client);
                     } catch (Exception e) {
                         log.warn("Could not return connector to factory", e);
                     }
                 }
             }
         }
-        
-        return queryMetrics;
+        return JexlFormattedStringBuildingVisitor.formatMetrics(queryMetrics);
     }
-    
+
     @Override
-    public QueryMetricListResponse query(String user, String queryId, DatawavePrincipal datawavePrincipal) {
+    public QueryMetricsDetailListResponse query(String user, String queryId, DatawavePrincipal datawavePrincipal) {
         QueryMetricsDetailListResponse response = new QueryMetricsDetailListResponse();
-        
+
         try {
             enableLogs(false);
-            
+
             Collection<? extends Collection<String>> authorizations = datawavePrincipal.getAuthorizations();
             Date end = new Date();
             Date begin = DateUtils.setYears(end, 2000);
-            
+
             QueryImpl query = new QueryImpl();
             query.setBeginDate(begin);
             query.setEndDate(end);
@@ -550,267 +550,194 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             query.setId(UUID.randomUUID());
             query.setParameters(ImmutableMap.of(QueryOptions.INCLUDE_GROUPING_CONTEXT, "true"));
             List<QueryMetric> queryMetrics = getQueryMetrics(response, query, datawavePrincipal);
-            
+
             response.setResult(queryMetrics);
+
+            response.setGeoQuery(queryMetrics.stream().anyMatch(SimpleQueryGeometryHandler::isGeoQuery));
         } finally {
             enableLogs(true);
         }
-        
+
         return response;
     }
-    
-    @Override
-    public QueryMetricsSummaryResponse getTotalQueriesSummaryCounts(Date begin, Date end, DatawavePrincipal datawavePrincipal) {
-        QueryMetricsSummaryResponse response = new QueryMetricsSummaryResponse();
-        
-        try {
-            enableLogs(false);
-            // this method is open to any user
-            datawavePrincipal = callerPrincipal;
-            
-            Collection<? extends Collection<String>> authorizations = datawavePrincipal.getAuthorizations();
-            QueryImpl query = new QueryImpl();
-            query.setBeginDate(begin);
-            query.setEndDate(end);
-            query.setQueryLogicName(QUERY_METRICS_LOGIC_NAME);
-            query.setQuery("USER > 'A' && USER < 'ZZZZZZZ'");
-            query.setQueryName(QUERY_METRICS_LOGIC_NAME);
-            query.setColumnVisibility(visibilityString);
-            query.setQueryAuthorizations(AuthorizationsUtil.buildAuthorizationString(authorizations));
-            query.setExpirationDate(DateUtils.addDays(new Date(), 1));
-            query.setPagesize(1000);
-            query.setUserDN(datawavePrincipal.getShortName());
-            query.setId(UUID.randomUUID());
-            query.setParameters(ImmutableMap.of(QueryOptions.INCLUDE_GROUPING_CONTEXT, "true"));
-            
-            List<QueryMetric> queryMetrics = getQueryMetrics(response, query, datawavePrincipal);
-            response = processQueryMetricsSummary(queryMetrics);
-        } catch (IOException e) {
-            log.error(e.getMessage(), e);
-        } finally {
-            enableLogs(true);
-        }
-        
-        return response;
-    }
-    
-    @Override
-    public QueryMetricsSummaryHtmlResponse getUserQueriesSummary(Date begin, Date end, DatawavePrincipal datawavePrincipal) {
-        QueryMetricsSummaryHtmlResponse response = new QueryMetricsSummaryHtmlResponse();
-        
-        try {
-            String user = datawavePrincipal.getShortName();
-            enableLogs(false);
-            // this method is open to any user
-            datawavePrincipal = callerPrincipal;
-            
-            Collection<? extends Collection<String>> authorizations = datawavePrincipal.getAuthorizations();
-            QueryImpl query = new QueryImpl();
-            query.setBeginDate(begin);
-            query.setEndDate(end);
-            query.setQueryLogicName(QUERY_METRICS_LOGIC_NAME);
-            query.setQuery("USER == '" + user + "'");
-            query.setQueryName(QUERY_METRICS_LOGIC_NAME);
-            query.setColumnVisibility(visibilityString);
-            query.setQueryAuthorizations(AuthorizationsUtil.buildAuthorizationString(authorizations));
-            query.setExpirationDate(DateUtils.addDays(new Date(), 1));
-            query.setPagesize(1000);
-            query.setUserDN(datawavePrincipal.getShortName());
-            query.setId(UUID.randomUUID());
-            query.setParameters(ImmutableMap.of(QueryOptions.INCLUDE_GROUPING_CONTEXT, "true"));
-            
-            List<QueryMetric> queryMetrics = getQueryMetrics(response, query, datawavePrincipal);
-            response = processQueryMetricsHtmlSummary(queryMetrics);
-        } catch (IOException e) {
-            log.error(e.getMessage(), e);
-        } finally {
-            enableLogs(true);
-        }
-        
-        return response;
-    }
-    
-    public QueryMetric toMetric(datawave.webservice.query.result.event.EventBase event) {
+
+    public BaseQueryMetric toMetric(EventBase event) {
         SimpleDateFormat sdf_date_time1 = new SimpleDateFormat("yyyyMMdd HHmmss");
         SimpleDateFormat sdf_date_time2 = new SimpleDateFormat("yyyyMMdd HHmmss");
-        
+        SimpleDateFormat sdf_date_time3 = new SimpleDateFormat("yyyyMMdd");
+
+        List<String> excludedFields = Arrays.asList("ELAPSED_TIME", "RECORD_ID", "NUM_PAGES", "NUM_RESULTS");
+
         try {
-            QueryMetric m = new QueryMetric();
+            BaseQueryMetric m = metricFactory.createMetric(false);
             List<FieldBase> field = event.getFields();
-            
+            m.setMarkings(event.getMarkings());
             TreeMap<Long,PageMetric> pageMetrics = Maps.newTreeMap();
-            
+
+            boolean createDateSet = false;
             for (FieldBase f : field) {
                 String fieldName = f.getName();
                 String fieldValue = f.getValueString();
-                
-                if (fieldName.equals("USER")) {
-                    m.setUser(fieldValue);
-                } else if (fieldName.equals("USER_DN")) {
-                    m.setUserDN(fieldValue);
-                } else if (fieldName.equals("QUERY_ID")) {
-                    m.setQueryId(fieldValue);
-                } else if (fieldName.equals("CREATE_DATE")) {
-                    try {
-                        Date d = sdf_date_time2.parse(fieldValue);
-                        m.setCreateDate(d);
-                    } catch (Exception e) {
-                        log.error(e.getMessage());
-                    }
-                } else if (fieldName.equals("QUERY")) {
-                    m.setQuery(fieldValue);
-                } else if (fieldName.equals("PLAN")) {
-                    m.setPlan(fieldValue);
-                } else if (fieldName.equals("QUERY_LOGIC")) {
-                    m.setQueryLogic(fieldValue);
-                } else if (fieldName.equals("QUERY_ID")) {
-                    m.setQueryId(fieldValue);
-                } else if (fieldName.equals("BEGIN_DATE")) {
-                    try {
-                        Date d = sdf_date_time1.parse(fieldValue);
-                        m.setBeginDate(d);
-                    } catch (Exception e) {
-                        log.error(e.getMessage());
-                    }
-                } else if (fieldName.equals("END_DATE")) {
-                    try {
-                        Date d = sdf_date_time1.parse(fieldValue);
-                        m.setEndDate(d);
-                    } catch (Exception e) {
-                        log.error(e.getMessage());
-                    }
-                } else if (fieldName.equals("HOST")) {
-                    m.setHost(fieldValue);
-                } else if (fieldName.equals("PROXY_SERVERS")) {
-                    m.setProxyServers(Arrays.asList(StringUtils.split(fieldValue, ",")));
-                } else if (fieldName.equals("AUTHORIZATIONS")) {
-                    m.setQueryAuthorizations(fieldValue);
-                } else if (fieldName.equals("QUERY_TYPE")) {
-                    m.setQueryType(fieldValue);
-                } else if (fieldName.equals("LIFECYCLE")) {
-                    m.setLifecycle(Lifecycle.valueOf(fieldValue));
-                } else if (fieldName.equals("ERROR_CODE")) {
-                    m.setErrorCode(fieldValue);
-                } else if (fieldName.equals("ERROR_MESSAGE")) {
-                    m.setErrorMessage(fieldValue);
-                } else if (fieldName.equals("SETUP_TIME")) {
-                    m.setSetupTime(Long.parseLong(fieldValue));
-                } else if (fieldName.equals("CREATE_CALL_TIME")) {
-                    m.setCreateCallTime(Long.parseLong(fieldValue));
-                } else if (fieldName.startsWith("PAGE_METRICS")) {
-                    int index = fieldName.indexOf(".");
-                    if (-1 == index) {
-                        log.error("Could not parse field name to extract repetition count: " + fieldName);
-                    } else {
-                        Long repetition = Long.parseLong(fieldName.substring(index + 1));
-                        
-                        String[] parts = StringUtils.split(fieldValue, "/");
-                        PageMetric pageMetric = null;
-                        if (parts.length == 8) {
-                            pageMetric = new PageMetric(Long.valueOf(parts[0]), Long.valueOf(parts[1]), Long.valueOf(parts[2]), Long.valueOf(parts[3]),
-                                            Long.valueOf(parts[4]), Long.valueOf(parts[5]), Long.valueOf(parts[6]), Long.valueOf(parts[7]));
-                        } else if (parts.length == 7) {
-                            pageMetric = new PageMetric(Long.valueOf(parts[0]), Long.valueOf(parts[1]), Long.valueOf(parts[2]), Long.valueOf(parts[3]),
-                                            Long.valueOf(parts[4]), Long.valueOf(parts[5]), Long.valueOf(parts[6]));
-                        } else if (parts.length == 5) {
-                            pageMetric = new PageMetric(Long.valueOf(parts[0]), Long.valueOf(parts[1]), Long.valueOf(parts[2]), Long.valueOf(parts[3]),
-                                            Long.valueOf(parts[4]), 0l, 0l);
-                        } else if (parts.length == 2) {
-                            pageMetric = new PageMetric(Long.valueOf(parts[0]), Long.valueOf(parts[1]), 0l, 0l);
-                        }
-                        
-                        if (pageMetric != null)
-                            pageMetrics.put(repetition, pageMetric);
-                    }
-                } else if (fieldName.equals("POSITIVE_SELECTORS")) {
-                    List<String> positiveSelectors = m.getPositiveSelectors();
-                    if (positiveSelectors == null) {
-                        positiveSelectors = new ArrayList<>();
-                    }
-                    positiveSelectors.add(fieldValue);
-                    m.setPositiveSelectors(positiveSelectors);
-                } else if (fieldName.equals("NEGATIVE_SELECTORS")) {
-                    List<String> negativeSelectors = m.getNegativeSelectors();
-                    if (negativeSelectors == null) {
-                        negativeSelectors = new ArrayList<>();
-                    }
-                    negativeSelectors.add(fieldValue);
-                    m.setNegativeSelectors(negativeSelectors);
-                } else if (fieldName.equals("LAST_UPDATED")) {
-                    try {
-                        Date d = sdf_date_time2.parse(fieldValue);
-                        m.setLastUpdated(d);
-                    } catch (Exception e) {
-                        log.error(e.getMessage());
-                    }
-                } else if (fieldName.equals("NUM_UPDATES")) {
-                    try {
-                        long numUpdates = Long.parseLong(fieldValue);
-                        m.setNumUpdates(numUpdates);
-                    } catch (Exception e) {
-                        log.error(e.getMessage());
-                    }
-                } else if (fieldName.equals("QUERY_NAME")) {
-                    m.setQueryName(fieldValue);
-                } else if (fieldName.equals("PARAMETERS")) {
-                    if (fieldValue != null) {
+                if (!excludedFields.contains(fieldName)) {
+                    if (fieldName.equals("USER")) {
+                        m.setUser(fieldValue);
+                    } else if (fieldName.equals("USER_DN")) {
+                        m.setUserDN(fieldValue);
+                    } else if (fieldName.equals("QUERY_ID")) {
+                        m.setQueryId(fieldValue);
+                    } else if (fieldName.equals("CREATE_DATE")) {
                         try {
-                            Set<Parameter> parameters = QueryUtil.parseParameters(fieldValue);
-                            m.setParameters(parameters);
-                            
+                            Date d = sdf_date_time2.parse(fieldValue);
+                            m.setCreateDate(d);
+                            createDateSet = true;
                         } catch (Exception e) {
-                            log.debug(e.getMessage());
+                            log.error(e.getMessage());
                         }
+                    } else if (fieldName.equals("QUERY")) {
+                        m.setQuery(fieldValue);
+                    } else if (fieldName.equals("PLAN")) {
+                        m.setPlan(fieldValue);
+                    } else if (fieldName.equals("QUERY_LOGIC")) {
+                        m.setQueryLogic(fieldValue);
+                    } else if (fieldName.equals("QUERY_ID")) {
+                        m.setQueryId(fieldValue);
+                    } else if (fieldName.equals("BEGIN_DATE")) {
+                        try {
+                            Date d = sdf_date_time1.parse(fieldValue);
+                            m.setBeginDate(d);
+                        } catch (Exception e) {
+                            log.error(e.getMessage());
+                        }
+                    } else if (fieldName.equals("END_DATE")) {
+                        try {
+                            Date d = sdf_date_time1.parse(fieldValue);
+                            m.setEndDate(d);
+                        } catch (Exception e) {
+                            log.error(e.getMessage());
+                        }
+                    } else if (fieldName.equals("HOST")) {
+                        m.setHost(fieldValue);
+                    } else if (fieldName.equals("PROXY_SERVERS")) {
+                        m.setProxyServers(Arrays.asList(StringUtils.split(fieldValue, ",")));
+                    } else if (fieldName.equals("AUTHORIZATIONS")) {
+                        m.setQueryAuthorizations(fieldValue);
+                    } else if (fieldName.equals("QUERY_TYPE")) {
+                        m.setQueryType(fieldValue);
+                    } else if (fieldName.equals("LIFECYCLE")) {
+                        m.setLifecycle(Lifecycle.valueOf(fieldValue));
+                    } else if (fieldName.equals("ERROR_CODE")) {
+                        m.setErrorCode(fieldValue);
+                    } else if (fieldName.equals("ERROR_MESSAGE")) {
+                        m.setErrorMessage(fieldValue);
+                    } else if (fieldName.equals("SETUP_TIME")) {
+                        m.setSetupTime(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("CREATE_CALL_TIME")) {
+                        m.setCreateCallTime(Long.parseLong(fieldValue));
+                    } else if (fieldName.startsWith("PAGE_METRICS")) {
+                        int index = fieldName.indexOf(".");
+                        if (-1 == index) {
+                            log.error("Could not parse field name to extract repetition count: " + fieldName);
+                        } else {
+                            Long pageNum = Long.parseLong(fieldName.substring(index + 1));
+                            PageMetric pageMetric = PageMetric.parse(fieldValue);
+                            if (pageMetric != null) {
+                                pageMetric.setPageNumber(pageNum);
+                                pageMetrics.put(pageNum, pageMetric);
+                            }
+                        }
+                    } else if (fieldName.equals("POSITIVE_SELECTORS")) {
+                        List<String> positiveSelectors = m.getPositiveSelectors();
+                        if (positiveSelectors == null) {
+                            positiveSelectors = new ArrayList<>();
+                        }
+                        positiveSelectors.add(fieldValue);
+                        m.setPositiveSelectors(positiveSelectors);
+                    } else if (fieldName.equals("NEGATIVE_SELECTORS")) {
+                        List<String> negativeSelectors = m.getNegativeSelectors();
+                        if (negativeSelectors == null) {
+                            negativeSelectors = new ArrayList<>();
+                        }
+                        negativeSelectors.add(fieldValue);
+                        m.setNegativeSelectors(negativeSelectors);
+                    } else if (fieldName.equals("LAST_UPDATED")) {
+                        try {
+                            Date d = sdf_date_time2.parse(fieldValue);
+                            m.setLastUpdated(d);
+                        } catch (Exception e) {
+                            log.error(e.getMessage());
+                        }
+                    } else if (fieldName.equals("NUM_UPDATES")) {
+                        try {
+                            long numUpdates = Long.parseLong(fieldValue);
+                            m.setNumUpdates(numUpdates);
+                        } catch (Exception e) {
+                            log.error(e.getMessage());
+                        }
+                    } else if (fieldName.equals("QUERY_NAME")) {
+                        m.setQueryName(fieldValue);
+                    } else if (fieldName.equals("PARAMETERS")) {
+                        if (fieldValue != null) {
+                            try {
+                                Set<Parameter> parameters = QueryUtil.parseParameters(fieldValue);
+                                m.setParameters(parameters);
+
+                            } catch (Exception e) {
+                                log.debug(e.getMessage());
+                            }
+                        }
+                    } else if (fieldName.equals("SOURCE_COUNT")) {
+                        m.setSourceCount(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("NEXT_COUNT")) {
+                        m.setNextCount(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("SEEK_COUNT")) {
+                        m.setSeekCount(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("YIELD_COUNT")) {
+                        m.setYieldCount(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("DOC_RANGES")) {
+                        m.setDocRanges(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("FI_RANGES")) {
+                        m.setFiRanges(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("VERSION")) {
+                        m.addVersion(BaseQueryMetric.DATAWAVE, fieldValue);
+                    } else if (fieldName.startsWith("VERSION.")) {
+                        m.addVersion(fieldName.substring(8), fieldValue);
+                    } else if (fieldName.equals("YIELD_COUNT")) {
+                        m.setYieldCount(Long.parseLong(fieldValue));
+                    } else if (fieldName.equals("LOGIN_TIME")) {
+                        m.setLoginTime(Long.parseLong(fieldValue));
+                    } else {
+                        log.debug("encountered unanticipated field name: " + fieldName);
                     }
-                }
-                
-                else if (fieldName.equals("SOURCE_COUNT")) {
-                    m.setSourceCount(Long.parseLong(fieldValue));
-                }
-                
-                else if (fieldName.equals("NEXT_COUNT")) {
-                    m.setNextCount(Long.parseLong(fieldValue));
-                }
-                
-                else if (fieldName.equals("SEEK_COUNT")) {
-                    m.setSeekCount(Long.parseLong(fieldValue));
-                }
-                
-                else if (fieldName.equals("YIELD_COUNT")) {
-                    m.setYieldCount(Long.parseLong(fieldValue));
-                }
-                
-                else if (fieldName.equals("DOC_RANGES")) {
-                    m.setDocRanges(Long.parseLong(fieldValue));
-                }
-                
-                else if (fieldName.equals("FI_RANGES")) {
-                    m.setFiRanges(Long.parseLong(fieldValue));
-                } else {
-                    log.error("encountered unanticipated field name: " + fieldName);
                 }
             }
-            
-            for (final Entry<Long,PageMetric> entry : pageMetrics.entrySet())
-                m.addPageMetric(entry.getValue());
-            
+            // if createDate has not been set, try to parse it from the event row
+            if (!createDateSet) {
+                try {
+                    String dateStr = event.getMetadata().getRow().substring(0, 8);
+                    m.setCreateDate(sdf_date_time3.parse(dateStr));
+                } catch (ParseException e) {
+
+                }
+            }
+            m.setPageTimes(new ArrayList<>(pageMetrics.values()));
             return m;
         } catch (Exception e) {
+            log.warn("Unexpected error creating query metric. Returning null", e);
             return null;
         }
     }
-    
-    protected void createAndConfigureTablesIfNecessary(String[] tableNames, TableOperations tops, Configuration conf) throws AccumuloSecurityException,
-                    AccumuloException, TableNotFoundException {
+
+    protected void createAndConfigureTablesIfNecessary(String[] tableNames, TableOperations tops, Configuration conf)
+                    throws AccumuloSecurityException, AccumuloException, TableNotFoundException {
         for (String table : tableNames) {
             // If the tables don't exist, then create them.
             try {
                 if (!tops.exists(table)) {
                     tops.create(table);
                     Map<String,TableConfigHelper> tableConfigs = getTableConfigs(log, conf, tableNames);
-                    
+
                     TableConfigHelper tableHelper = tableConfigs.get(table);
-                    
+
                     if (tableHelper != null) {
                         tableHelper.configure(tops);
                     } else {
@@ -823,37 +750,37 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             }
         }
     }
-    
+
     @SuppressWarnings("unchecked")
     private Map<String,TableConfigHelper> getTableConfigs(Logger log, Configuration conf, String[] tableNames) {
         Map<String,TableConfigHelper> helperMap = new HashMap<>(tableNames.length);
-        
+
         for (String table : tableNames) {
             String prop = table + TableConfigHelper.TABLE_CONFIG_CLASS_SUFFIX;
             String className = conf.get(prop, null);
             TableConfigHelper tableHelper = null;
-            
+
             if (className != null) {
                 try {
                     Class<? extends TableConfigHelper> tableHelperClass = (Class<? extends TableConfigHelper>) Class.forName(className.trim());
-                    tableHelper = tableHelperClass.newInstance();
-                    
+                    tableHelper = tableHelperClass.getDeclaredConstructor().newInstance();
+
                     if (tableHelper != null)
                         tableHelper.setup(table, conf, log);
-                } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+                } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                     throw new IllegalArgumentException(e);
                 }
             }
-            
+
             helperMap.put(table, tableHelper);
         }
-        
+
         return helperMap;
     }
-    
+
     private void enableLogs(boolean enable) {
         if (enable) {
-            ThreadLocalLogLevel.clear();
+            ThreadConfigurableLogger.clearThreadLevels();
         } else {
             // All loggers that are encountered in the call chain during metrics calls should be included here.
             // If you need to add a logger name here, you also need to change the Logger declaration where that Logger is instantiated
@@ -861,32 +788,28 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             // Logger log = Logger.getLogger(MyClass.class);
             // to
             // Logger log = ThreadConfigurableLogger.getLogger(MyClass.class);
-            
-            ThreadLocalLogLevel.setLevel("datawave.query.parser.DatawaveQueryAnalyzer", Level.OFF);
-            ThreadLocalLogLevel.setLevel("datawave.query.parser.DatawaveQueryParser", Level.OFF);
-            
-            ThreadLocalLogLevel.setLevel("datawave.query.index.lookup.RangeStream", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.metrics.ShardTableQueryMetricHandler", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.planner.DefaultQueryPlanner", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.planner.ThreadedRangeBundlerIterator", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.scheduler.SequentialScheduler", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.tables.ShardQueryLogic", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.metrics.ShardTableQueryMetricHandler", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.VisibilityHelper", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.jexl.visitors.QueryModelVisitor", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.jexl.visitors.ExpandMultiNormalizedTerms", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.jexl.lookups.LookupBoundedRangeForTerms", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.query.jexl.visitors.RangeConjunctionRebuildingVisitor", Level.ERROR);
-            
-            ThreadLocalLogLevel.setLevel("datawave.ingest.data.TypeRegistry", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.ingest.data.config.ingest.BaseIngestHelper", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.ingest.mapreduce.handler.shard.AbstractColumnBasedHandler", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.ingest.mapreduce.handler.shard.ShardedDataTypeHandler", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.ingest.util.RegionTimer", Level.ERROR);
-            ThreadLocalLogLevel.setLevel("datawave.ingest.data.Event", Level.OFF);
+
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.index.lookup.RangeStream", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.metrics.ShardTableQueryMetricHandler", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.planner.DefaultQueryPlanner", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.planner.ThreadedRangeBundlerIterator", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.scheduler.SequentialScheduler", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.tables.ShardQueryLogic", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.metrics.ShardTableQueryMetricHandler", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.jexl.visitors.QueryModelVisitor", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.jexl.visitors.ExpandMultiNormalizedTerms", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.jexl.lookups.LookupBoundedRangeForTerms", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.query.jexl.visitors.RangeConjunctionRebuildingVisitor", Level.ERROR);
+
+            ThreadConfigurableLogger.setLevelForThread("datawave.ingest.data.TypeRegistry", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.ingest.data.config.ingest.BaseIngestHelper", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.ingest.mapreduce.handler.shard.AbstractColumnBasedHandler", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.ingest.mapreduce.handler.shard.ShardedDataTypeHandler", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.ingest.util.RegionTimer", Level.ERROR);
+            ThreadConfigurableLogger.setLevelForThread("datawave.ingest.data.Event", Level.OFF);
         }
     }
-    
+
     @Override
     public void reload() {
         try {
@@ -900,23 +823,39 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             log.error(e.getMessage(), e);
         }
     }
-    
+
     @Override
-    public QueryMetricsSummaryHtmlResponse getTotalQueriesSummary(Date begin, Date end, DatawavePrincipal datawavePrincipal) {
-        QueryMetricsSummaryHtmlResponse response = new QueryMetricsSummaryHtmlResponse();
-        
+    public QueryMetricsSummaryResponse getTotalQueriesSummaryCounts(Date begin, Date end, DatawavePrincipal datawavePrincipal) {
+        return getQueryMetricsSummary(begin, end, false, datawavePrincipal, new QueryMetricsSummaryResponse());
+    }
+
+    @Override
+    public QueryMetricsSummaryResponse getTotalQueriesSummary(Date begin, Date end, DatawavePrincipal datawavePrincipal) {
+        return (QueryMetricsSummaryResponse) getQueryMetricsSummary(begin, end, false, datawavePrincipal, new QueryMetricsSummaryResponse());
+    }
+
+    @Override
+    public QueryMetricsSummaryResponse getUserQueriesSummary(Date begin, Date end, DatawavePrincipal datawavePrincipal) {
+        return (QueryMetricsSummaryResponse) getQueryMetricsSummary(begin, end, true, datawavePrincipal, new QueryMetricsSummaryResponse());
+    }
+
+    public QueryMetricsSummaryResponse getQueryMetricsSummary(Date begin, Date end, boolean onlyCurrentUser, DatawavePrincipal datawavePrincipal,
+                    QueryMetricsSummaryResponse response) {
+
         try {
             enableLogs(false);
-            enableLogs(true);
-            // this method is open to any user
-            datawavePrincipal = callerPrincipal;
-            
+
             Collection<? extends Collection<String>> authorizations = datawavePrincipal.getAuthorizations();
             QueryImpl query = new QueryImpl();
             query.setBeginDate(begin);
             query.setEndDate(end);
             query.setQueryLogicName(QUERY_METRICS_LOGIC_NAME);
-            query.setQuery("USER > 'A' && USER < 'ZZZZZZZ'");
+            if (onlyCurrentUser) {
+                String user = datawavePrincipal.getShortName();
+                query.setQuery("USER == '" + user + "'");
+            } else {
+                query.setQuery("((_Bounded_ = true) && (USER > 'A' && USER < 'ZZZZZZZ'))");
+            }
             query.setQueryName(QUERY_METRICS_LOGIC_NAME);
             query.setColumnVisibility(visibilityString);
             query.setQueryAuthorizations(AuthorizationsUtil.buildAuthorizationString(authorizations));
@@ -925,15 +864,15 @@ public class ShardTableQueryMetricHandler extends BaseQueryMetricHandler<QueryMe
             query.setUserDN(datawavePrincipal.getShortName());
             query.setId(UUID.randomUUID());
             query.setParameters(ImmutableMap.of(QueryOptions.INCLUDE_GROUPING_CONTEXT, "true"));
-            
+
             List<QueryMetric> queryMetrics = getQueryMetrics(response, query, datawavePrincipal);
-            response = processQueryMetricsHtmlSummary(queryMetrics);
+            response = processQueryMetricsSummary(queryMetrics, end, response);
         } catch (IOException e) {
             log.error(e.getMessage(), e);
         } finally {
             enableLogs(true);
         }
-        
+
         return response;
     }
 }
